# huskyverse-app

./: .env  .env.dev  .env.example  .gitignore  Anchor.toml  README.md  package.json
.anchor/test-ledger/: faucet-keypair.json
.anchor/test-ledger/rocksdb/: IDENTITY  LOG
frontend/: .env.example  package.json
frontend/components/: CoinsLogo.tsx  Constraint.tsx  Countdown.tsx  Deposit.tsx  Form.tsx  Glass.tsx  Header.tsx  MaxWithdrawChart.tsx  Phaser.tsx  WalletConnectionProvider.tsx
frontend/hooks/: useATA.ts  useIdoAccount.ts  useIdoPool.ts  useLinearWithdrawDecreaseInfo.ts  useMockData.ts  usePhaseInfo.ts  usePredictedResult.ts  userTokenBalance.ts
frontend/idl/: ido_pool.json  ido_pool.ts
frontend/lib/: format.test.ts  format.ts  token.ts
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: globals.css  wallet-adapter.css
programs/ido-pool/: Cargo.toml
programs/ido-pool/.coderrect/logs/: log.current
programs/ido-pool/src/: calc.rs  lib.rs  spl_tokenx.rs
scripts/: _util.js  init.js  initMockSPLToken.js
sdk/ido-pool/: index.d.ts  index.js  package.json  tsconfig.json
tests/: ido-pool.js
tests/utils/: index.js
