[package]
description = "Created with Anchor"
edition = "2018"
name = "ido-pool"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "ido_pool"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
pretty_assertions = "1.1.0"
